--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     ],
     "scripts": {},
     "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^1.7.0",
+        "@typescript-eslint/parser": "^1.7.0",
         "babel-eslint": "10.0.1",
         "eslint-config-prettier": "^4.2.0",
         "eslint-config-react-app": "^4.0.1",
