--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,16 @@
     "files.insertFinalNewline": true,
     "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
     "javascript.implicitProjectConfig.experimentalDecorators": true,
-    "javascript.validate.enable": true,
+    "javascript.validate.enable": false,
     "prettier.eslintIntegration": true,
     "eslint.autoFixOnSave": true,
+    "eslint.validate": [
+        "json",
+        "javascript",
+        "javascriptreact",
+        { "language": "typescript", "autoFix": true },
+        { "language": "typescriptreact", "autoFix": true }
+    ],
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
@@ -17,6 +24,12 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
