--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-config-koot",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "ESLint configuration used by Koot.js & its boilerplate",
     "author": {
         "name": "diablohu",
@@ -25,23 +25,23 @@
     ],
     "scripts": {},
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^1.7.0",
-        "@typescript-eslint/parser": "^1.7.0",
+        "@typescript-eslint/eslint-plugin": "1.9.0",
+        "@typescript-eslint/parser": "1.9.0",
         "babel-eslint": "10.0.1",
-        "eslint-config-prettier": "^4.2.0",
-        "eslint-config-react-app": "^4.0.1",
-        "eslint-plugin-flowtype": "^3.8.1",
-        "eslint-plugin-import": "^2.17.2",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "^7.13.0",
-        "eslint-plugin-react-hooks": "^1.6.0"
+        "eslint-config-prettier": "4.2.0",
+        "eslint-config-react-app": "4.0.1",
+        "eslint-plugin-flowtype": "3.8.2",
+        "eslint-plugin-import": "2.17.2",
+        "eslint-plugin-jsx-a11y": "6.2.1",
+        "eslint-plugin-prettier": "3.1.0",
+        "eslint-plugin-react": "7.13.0",
+        "eslint-plugin-react-hooks": "1.6.0"
     },
     "devDependencies": {
         "eslint": "5.16.0",
-        "husky": "^2.2.0",
-        "lint-staged": "^8.1.6",
-        "prettier": "^1.17.0"
+        "husky": "2.2.0",
+        "lint-staged": "8.1.6",
+        "prettier": "1.17.1"
     },
     "peerDependencies": {
         "eslint": ">= 5"
