update recommended env

--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
         }
     },
     "lint-staged": {
-        "*.{js,jsx,ts,tsx}": [
+        "*.{js,jsx,ts,tsx,cjs,mjs}": [
             "eslint --fix",
             "prettier --write",
             "git add"
         ],
-        "*.{json,md}": [
+        "*.{json,md,css,less,sass,scss}": [
             "prettier --write",
             "git add"
         ]
