--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "eslint": "5.16.0",
         "husky": "3.0.3",
         "lint-staged": "9.2.1",
-        "prettier": "1.18.2"
+        "prettier": "1.18.2",
+        "prettier-eslint": "^9.0.0"
     },
     "peerDependencies": {
         "eslint": ">=6"
