--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-config-koot",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "ESLint configuration used by Koot.js & its boilerplate",
     "author": {
         "name": "diablohu",
@@ -42,7 +42,8 @@
         "husky": "3.0.4",
         "lint-staged": "9.2.5",
         "prettier": "1.18.2",
-        "prettier-eslint": "^9.0.0"
+        "prettier-eslint": "^9.0.0",
+        "react": "^16.9.0"
     },
     "peerDependencies": {
         "eslint": ">=6"
