--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-config-koot",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "ESLint configuration used by Koot.js & its boilerplate",
     "author": {
         "name": "diablohu",
@@ -25,23 +25,23 @@
     ],
     "scripts": {},
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "2.0.0",
-        "@typescript-eslint/parser": "2.0.0",
-        "babel-eslint": "10.0.3",
-        "eslint-config-prettier": "6.1.0",
-        "eslint-config-react-app": "5.0.1",
-        "eslint-plugin-flowtype": "4.2.0",
-        "eslint-plugin-import": "2.18.2",
-        "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-prettier": "3.1.0",
-        "eslint-plugin-react": "7.14.3",
-        "eslint-plugin-react-hooks": "2.0.1"
+        "@typescript-eslint/eslint-plugin": "^2.0.0",
+        "@typescript-eslint/parser": "^2.0.0",
+        "babel-eslint": "^10.0.3",
+        "eslint-config-prettier": "^6.1.0",
+        "eslint-config-react-app": "^5.0.1",
+        "eslint-plugin-flowtype": "^4.2.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.0",
+        "eslint-plugin-react": "^7.14.3",
+        "eslint-plugin-react-hooks": "^2.0.1"
     },
     "devDependencies": {
-        "eslint": "5.16.0",
-        "husky": "3.0.4",
-        "lint-staged": "9.2.5",
-        "prettier": "1.18.2",
+        "eslint": "^5.16.0",
+        "husky": "^3.0.4",
+        "lint-staged": "^9.2.5",
+        "prettier": "^1.18.2",
         "prettier-eslint": "^9.0.0",
         "react": "^16.9.0"
     },
