--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
-    "name": "eslint-config-koot",
-    "version": "1.2.2",
-    "description": "ESLint configuration used by Koot.js & its boilerplate",
+    "name": "koot-eslint",
+    "description": "ESLint related packages.",
+    "private": true,
+    "scripts": {
+        "doc": "docsify serve docs",
+        "bootstrap": "node bootstrap.js",
+        "reset": "node ./reset.js",
+        "publish": "lerna publish"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cmux/koot-eslint"
+    },
+    "keywords": [
+        "eslint",
+        "linter"
+    ],
     "author": {
         "name": "diablohu",
         "email": "diablohudream@gmail.com",
-        "url": "https://diablohu.com"
+        "url": "http://diablohu.com"
     },
     "contributors": [
         {
@@ -13,55 +27,51 @@
             "url": "https://github.com/daqi"
         }
     ],
-    "homepage": "https://github.com/cmux/eslint-config-koot#readme",
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/cmux/eslint-config-koot.git"
-    },
-    "keywords": [
-        "eslint",
-        "eslintconfig"
-    ],
-    "scripts": {},
-    "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^2.1.0",
-        "@typescript-eslint/parser": "^2.1.0",
-        "babel-eslint": "^10.0.3",
-        "eslint-config-prettier": "^6.2.0",
-        "eslint-config-react-app": "^5.0.1",
-        "eslint-plugin-flowtype": "^4.3.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.14.3",
-        "eslint-plugin-react-hooks": "^2.0.1"
-    },
-    "devDependencies": {
-        "eslint": "^5.16.0",
-        "husky": "^3.0.5",
-        "jest": "^24.9.0",
-        "lint-staged": "^9.2.5",
-        "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0",
-        "react": "^16.9.0"
-    },
-    "peerDependencies": {
-        "eslint": ">=6"
-    },
     "bugs": {
-        "url": "https://github.com/cmux/eslint-config-koot"
+        "url": "https://github.com/cmux/koot-eslint/issues"
     },
+    "homepage": "https://github.com/cmux/koot-eslint",
+    "engines": {
+        "node": ">=8.9.0"
+    },
+    "license": "Apache-2.0",
+    "devDependencies": {
+        "chalk": "^2.4.2",
+        "cli-spinners": "^2.2.0",
+        "eslint": "^6.3.0",
+        "eslint-config-koot": "file:./packages/eslint-config-koot",
+        "fs-extra": "^8.1.0",
+        "husky": "^3.0.5",
+        "inquirer": "^7.0.0",
+        "jest": "^24.9.0",
+        "lerna": "^3.16.4",
+        "lerna-wizard": "^1.1.1",
+        "lint-staged": "^9.2.5",
+        "ora": "^3.4.0",
+        "prettier": "^1.18.2",
+        "prettier-eslint": "^9.0.0"
+    },
+    "eslintIgnore": [
+        "node_modules/**/*"
+    ],
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged"
         }
     },
     "lint-staged": {
-        "*.{js,jsx,ts,tsx,cjs,mjs}": [
+        "*.{js,jsx,cjs,mjs}": [
             "eslint --fix",
             "prettier --write",
             "git add"
+        ],
+        "*.{ts,tsx}": [
+            "eslint --fix",
+            "prettier --write",
+            "git add"
+        ],
+        "*.{xxxxxx}": [
+            "tsc --noEmit"
         ],
         "*.{json,md,css,less,sass,scss}": [
             "prettier --write",
