--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "cli-spinners": "^2.2.0",
         "eslint": "^6.3.0",
         "eslint-config-koot": "file:./packages/eslint-config-koot",
+        "eslint-plugin-koot": "file:./packages/eslint-plugin-koot",
         "fs-extra": "^8.1.0",
         "husky": "^3.0.5",
         "inquirer": "^7.0.0",
