--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "lint-staged": "^9.2.5",
         "ora": "^3.4.0",
         "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0"
+        "prettier-eslint": "^9.0.0",
+        "simple-git": "^1.126.0"
     },
     "eslintIgnore": [
         "node_modules/**/*"
