--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "doc": "docsify serve docs",
         "bootstrap": "node bootstrap.js",
         "reset": "node ./reset.js",
-        "publish": "node ./publish.js"
+        "publish": "node ./publish.js",
+        "test": "mocha packages/eslint-plugin-koot/__tests__ --recursive"
     },
     "repository": {
         "type": "git",
@@ -46,10 +47,10 @@
         "glob-promise": "^3.4.0",
         "husky": "^3.0.5",
         "inquirer": "^7.0.0",
-        "jest": "^24.9.0",
         "lerna": "^3.16.4",
         "lerna-wizard": "^1.1.1",
         "lint-staged": "^9.2.5",
+        "mocha": "^6.2.0",
         "ora": "^3.4.0",
         "prettier": "^1.18.2",
         "prettier-eslint": "^9.0.0",
