--- a/packages/eslint-config-koot/package.json
+++ b/packages/eslint-config-koot/package.json
@@ -34,6 +34,7 @@
         "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-koot": "^1.4.0",
+        "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-react-hooks": "^2.3.0"
     },
