--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
         "chalk": "^3.0.0",
         "cli-spinners": "^2.2.0",
         "crlf": "^1.1.1",
-        "eslint": "^6.7.2",
+        "eslint": "^6.8.0",
         "eslint-config-koot": "file:./packages/eslint-config-koot",
         "eslint-plugin-koot": "file:./packages/eslint-plugin-koot",
-        "fs-extra": "^8.1.0",
+        "fs-extra": "^9.0.0",
         "glob-promise": "^3.4.0",
-        "husky": "^3.1.0",
-        "inquirer": "^7.0.1",
-        "lerna": "^3.19.0",
+        "husky": "^4.2.3",
+        "inquirer": "^7.1.0",
+        "lerna": "^3.20.2",
         "lerna-wizard": "^1.1.1",
-        "lint-staged": "^9.5.0",
-        "mocha": "^6.2.2",
+        "lint-staged": "^10.0.9",
+        "mocha": "^7.1.1",
         "ora": "^4.0.3",
-        "prettier": "^1.19.1",
+        "prettier": "^2.0.2",
         "prettier-eslint": "^9.0.1",
-        "simple-git": "^1.129.0"
+        "simple-git": "^1.132.0"
     },
     "eslintIgnore": [
         "node_modules/**/*"
@@ -67,20 +67,17 @@
     "lint-staged": {
         "*.{js,jsx,cjs,mjs}": [
             "eslint --fix",
-            "prettier --write",
-            "git add"
+            "prettier --write"
         ],
         "*.{ts,tsx}": [
             "eslint --fix",
-            "prettier --write",
-            "git add"
+            "prettier --write"
         ],
         "*.{xxxxxx}": [
             "tsc --noEmit"
         ],
         "*.{json,md,css,less,sass,scss}": [
-            "prettier --write",
-            "git add"
+            "prettier --write"
         ]
     }
 }
