--- a/packages/eslint-config-koot/package.json
+++ b/packages/eslint-config-koot/package.json
@@ -25,24 +25,25 @@
     ],
     "scripts": {},
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.1.1",
-        "@typescript-eslint/parser": "^4.1.1",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
         "babel-eslint": "^10.1.0",
-        "eslint-config-prettier": "^6.11.0",
+        "eslint-config-prettier": "^6.14.0",
         "eslint-config-react-app": "^5.2.1",
         "eslint-plugin-flowtype": "^5.2.0",
-        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-koot": "^2.0.0",
         "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.2"
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0"
     },
     "devDependencies": {
-        "react": "^16.13.1"
+        "react": ">=17.0.0"
     },
     "peerDependencies": {
-        "eslint": ">=7.0.0"
+        "eslint": ">=7.0.0",
+        "react": ">=17.0.0"
     },
     "bugs": {
         "url": "https://github.com/cmux/koot-eslint"
