--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
     "name": "koot-eslint",
     "description": "ESLint related packages.",
     "private": true,
+    "type": "module",
     "scripts": {
         "doc": "docsify serve docs",
         "bootstrap": "node bootstrap.js",
         "reset": "node ./reset.js",
         "publish": "node ./publish.js",
-        "test": "mocha packages/eslint-plugin-koot/__tests__ --recursive"
+        "test": "mocha packages/eslint-plugin-koot/__tests__ --recursive",
+        "prepare": "husky install",
+        "up": "npx ncu -i"
     },
     "repository": {
         "type": "git",
@@ -33,28 +36,28 @@
     },
     "homepage": "https://github.com/cmux/koot-eslint",
     "engines": {
-        "node": ">=8.9.0"
+        "node": ">=16.0.0"
     },
     "license": "Apache-2.0",
     "devDependencies": {
-        "chalk": "^4.1.0",
-        "cli-spinners": "^2.5.0",
+        "chalk": "^5.2.0",
+        "cli-spinners": "^2.7.0",
         "crlf": "^1.1.1",
-        "eslint": "^7.11.0",
+        "eslint": "^8.30.0",
         "eslint-config-koot": "file:./packages/eslint-config-koot",
         "eslint-plugin-koot": "file:./packages/eslint-plugin-koot",
-        "fs-extra": "^9.0.1",
-        "glob-promise": "^3.4.0",
-        "husky": "^4.3.0",
-        "inquirer": "^7.3.3",
-        "lerna": "^3.22.1",
+        "fs-extra": "^11.1.0",
+        "glob-promise": "^6.0.0",
+        "husky": "^8.0.2",
+        "inquirer": "^9.1.4",
+        "lerna": "^6.3.0",
         "lerna-wizard": "^1.1.1",
-        "lint-staged": "^10.4.2",
-        "mocha": "^8.2.0",
-        "ora": "^5.1.0",
-        "prettier": "^2.1.2",
-        "prettier-eslint": "^11.0.0",
-        "simple-git": "^2.21.0"
+        "lint-staged": "^13.1.0",
+        "mocha": "^10.2.0",
+        "ora": "^6.1.2",
+        "prettier": "^2.8.1",
+        "prettier-eslint": "^15.0.1",
+        "simple-git": "^3.15.1"
     },
     "eslintIgnore": [
         "node_modules/**/*"
