--- a/packages/eslint-config-koot/package.json
+++ b/packages/eslint-config-koot/package.json
@@ -1,5 +1,6 @@
 {
     "name": "eslint-config-koot",
+    "type": "commonjs",
     "version": "3.1.1",
     "description": "ESLint configuration used by Koot.js & its boilerplate",
     "author": {
@@ -25,25 +26,29 @@
     ],
     "scripts": {},
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.5.0",
-        "@typescript-eslint/parser": "^4.5.0",
-        "babel-eslint": "^10.1.0",
-        "eslint-config-prettier": "^6.14.0",
-        "eslint-config-react-app": "^5.2.1",
-        "eslint-plugin-flowtype": "^5.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "@babel/core": ">=7.0.0",
+        "@babel/eslint-parser": ">=7.0.0",
+        "@babel/preset-env": ">=7.0.0",
+        "@babel/preset-flow": ">=7.0.0",
+        "@babel/preset-react": ">=7.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-flowtype": "^8.0.3",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-koot": "^3.0.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.21.5",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "semver": "^7.3.2"
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "semver": "^6.3.0"
     },
     "devDependencies": {
         "react": ">=16.0.0"
     },
     "peerDependencies": {
-        "eslint": ">=7.0.0",
+        "eslint": ">=8.0.0",
         "react": ">=16.0.0"
     },
     "bugs": {
