--- a/packages/eslint-plugin-koot/package.json
+++ b/packages/eslint-plugin-koot/package.json
@@ -1,5 +1,6 @@
 {
     "name": "eslint-plugin-koot",
+    "type": "commonjs",
     "version": "3.0.0",
     "description": "ESLint plugins used by Koot.js & its boilerplate",
     "main": "index.js",
@@ -22,10 +23,10 @@
     ],
     "scripts": {},
     "dependencies": {
-        "eslint-plugin-react": "^7.21.5"
+        "eslint-plugin-react": "^7.31.11"
     },
     "peerDependencies": {
-        "eslint": ">=7.9.0"
+        "eslint": ">=8.0.0"
     },
     "bugs": {
         "url": "https://github.com/cmux/koot-eslint"
